fix gradient on Safari Desltop

--- a/src/components/UI/Background/PurpleBackground/PuprpleBackground.module.scss
+++ b/src/components/UI/Background/PurpleBackground/PuprpleBackground.module.scss
@@ -35,7 +35,7 @@
   height: 40px;
 
   will-change: transform;
-  transform: scale(10, 30) translate(-40%, 50%);
+  transform: scale(40, 30) translate(-40%, 50%);
 
   z-index: 1;
 
@@ -66,7 +66,7 @@
   height: 40px;
 
   will-change: transform;
-  transform: scale(40, 20) translate(-50%, 50%);
+  transform: scale(40, 30) translate(-50%, 50%);
 
   z-index: 1;
 
