--- a/src/components/UI/Background/RadialGradient/RadialGradient.module.scss
+++ b/src/components/UI/Background/RadialGradient/RadialGradient.module.scss
@@ -6,7 +6,7 @@
   height: 40px;
 
   will-change: transform;
-  transform: scale(10, 10) translate(25%, -60%);
+  transform: scale(20, 20) translate(25%, -60%);
 
   z-index: 1;
 
